--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -34,6 +34,22 @@ main {
   background: linear-gradient(180deg, rgba(59, 56, 55, 0) 0%, #3B3837 100%);
   z-index: 3;
 }
+
+.preloading{
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  & div {
+    position: absolute;
+    border: 4px solid #fff;
+    opacity: 1;
+    border-radius: 50%;
+    animation: preloading 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+}
+
+
 /*---header--------------------*/
 .header {
   background: #403c3b;
@@ -907,7 +923,23 @@ main {
 
 }
 
-
+/*---keyframes-----------------*/
+@keyframes preloading {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
 /*---Media---------------------*/
 @media (max-width: 1023px) {
 
