--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,21 @@ main {
   z-index: 3;
 }
 
+.preloading {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.preloading div {
+  position: absolute;
+  border: 4px solid #fff;
+  opacity: 1;
+  border-radius: 50%;
+  -webkit-animation: preloading 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+          animation: preloading 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
 /*---header--------------------*/
 .header {
   background: #403c3b;
@@ -1370,6 +1385,39 @@ main {
   font-weight: 600;
 }
 
+/*---keyframes-----------------*/
+@-webkit-keyframes preloading {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
+@keyframes preloading {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
 /*---Media---------------------*/
 @media (max-width: 1023px) {
   .about-top {
