--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -35,20 +35,9 @@ main {
   z-index: 3;
 }
 
-.preloading{
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
-  & div {
-    position: absolute;
-    border: 4px solid #fff;
-    opacity: 1;
-    border-radius: 50%;
-    animation: preloading 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-  }
+._preloading {
+  background: url(../img/icon/preloading.gif) center no-repeat;
 }
-
 
 /*---header--------------------*/
 .header {
@@ -923,23 +912,6 @@ main {
 
 }
 
-/*---keyframes-----------------*/
-@keyframes preloading {
-  0% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
-  100% {
-    top: 0px;
-    left: 0px;
-    width: 72px;
-    height: 72px;
-    opacity: 0;
-  }
-}
 /*---Media---------------------*/
 @media (max-width: 1023px) {
 
